--- a/example/index.html
+++ b/example/index.html
@@ -1,22 +1,25 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../ngAutocomplete.css">
   </head>
-  <body>
-    <div class="container" ng-app="MyApp">
+  <body ng-app="MyApp">
+    <div class="container" ng-controller='MyController'>
       <div id="logo">
         <img src="logo.png">
       </div>
-      <div ng-controller='MyController'>
-        <live-search id="search1" type="text"
-          live-search-callback="mySearchCallback"
-          live-search-item-template="{{result.city}}<strong>{{result.state}}</strong><b>{{result.country}}</b>"
-          live-search-select="fullName"
-          ng-model="mySearch" ></live-search>
+      <div>
+        <autocomplete id="search1" type="text"
+          search-callback="mySearchCallback"
+          result-template="{{result.city}}<strong>{{result.state}}</strong><b>{{result.country}}</b>"
+          attribute-name="fullName"
+          ng-model="mySearch"></autocomplete>
       </div>
+      Result: {{mySearch}}
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../test/lib/angular/angular.js"></script>
-    <script type="text/javascript" src="../liveSearch.js"></script>
+    <script type="text/javascript" src="../ngAutocomplete.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
